frontend/src/components/ArticlePreview.scss
$root-hover: #f1f1ff;

.article-prev-root {
    display: flex;
    flex-direction: row;
}

.article-prev-root:hover {
    background-color: $root-hover;
    cursor: pointer;
}

.article-prev-left {
    display: flex;
    flex-direction: column;

    h3 {
        margin: 10px;
        font-weight: 400;
    }
}

.article-prev-info {
    display: flex;

    div {
        display: flex;
        flex-direction: row;
        margin: 5px 10px 5px 10px;

        h5 {
            font-weight: 100;
            margin: 0;
        }
    }
}

